--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = "FirstProgram"
 
 group 'org.example'
 version '1.0-SNAPSHOT'
