--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "FirstProgram"
+mainClassName = "ru.stqa.pft.sandbox.FirstProgram"
 
 group 'org.example'
 version '1.0-SNAPSHOT'
